K8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: myapp
    env: devops
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myservice2
  labels:
    app: myapp2
    env: devops
spec:
  selector:
    app: myapp2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
